hotfix: 이중 리스트를 하나로 변경